# llm-novel-idea-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md
novel_idea_generator/: __init__.py  __main__.py  cli.py  config.py  generation.py  result.py
novel_search_space/: __init__.py  __main__.py  cli.py  concept_lists.py  config.py  generation.py  models.py  result.py  vocabulary.py
