[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-idea-generator"
version = "0.1.0"
description = "Generate non-obvious concepts by deriving candidate ideas from embedding geometry over WordNet instead of an LLM's prior."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "datastudy-nl" }]
keywords = ["llm", "ideation", "embeddings", "wordnet", "creativity", "agent-tool"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=3.0.0",
    "transformers>=4.44.0",
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/datastudy-nl/llm-novel-idea-generator"
Repository = "https://github.com/datastudy-nl/llm-novel-idea-generator"
Issues = "https://github.com/datastudy-nl/llm-novel-idea-generator/issues"

[project.scripts]
novel-idea-generator = "novel_idea_generator.cli:main"

[tool.setuptools]
packages = ["novel_idea_generator"]
